<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form_submit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:background="#0E0E0E">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center_horizontal"
            android:text="@string/project_name"
            android:textColor="#ccac0a"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/vector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.233"
            app:srcCompat="@drawable/abc_vector_test" />

        <ImageView
            android:id="@+id/gad_logo"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="553dp"
        android:layout_marginTop="178dp"
        android:background="@color/black">


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="363dp"
            android:layout_height="54dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/curve"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/Email"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="361dp"
            android:layout_height="67dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/curve"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Github_url"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="165dp"
            android:layout_height="59dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/button"
            android:text="@string/button_sbt"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/ed_lastname"
            android:layout_width="180dp"
            android:layout_height="56dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/curve"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="156dp"
            android:layout_height="57dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/curve"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            app:layout_constraintEnd_toStartOf="@+id/ed_lastname"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>